--- a/CourseProjectApplication/CourseProjectApplication/CourseProjectApplication.csproj
+++ b/CourseProjectApplication/CourseProjectApplication/CourseProjectApplication.csproj
@@ -46,20 +46,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISecSystem.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="SecSystem\ISecSystem.cs" />
+    <Compile Include="SecSystem\SecSystemBuilder.cs" />
+    <Compile Include="Ui\EditAccessRule.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Ui\EditAccessRule.Designer.cs">
+      <DependentUpon>EditAccessRule.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ui\ListViewItemWithId.cs" />
+    <Compile Include="Ui\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ui\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ui\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ui\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecSystem\AccessDeniedExceptions.cs" />
     <Compile Include="SecSystem\Location.cs" />
+    <Compile Include="SecSystem\SecLevel.cs" />
     <Compile Include="SecSystem\SecSystemBridge.cs" />
     <Compile Include="SecSystem\User.cs" />
     <Compile Include="SecSystem\UserName.cs" />
+    <EmbeddedResource Include="Ui\EditAccessRule.resx">
+      <DependentUpon>EditAccessRule.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ui\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ui\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
