--- a/CourseProjectApplication/CourseProjectApplication/CourseProjectApplication.csproj
+++ b/CourseProjectApplication/CourseProjectApplication/CourseProjectApplication.csproj
@@ -93,7 +93,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="..\..\Assets\ClassDiagram.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
