--- a/CourseProjectApplication/CourseProjectApplication/CourseProjectApplication.csproj
+++ b/CourseProjectApplication/CourseProjectApplication/CourseProjectApplication.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NAudio, Version=1.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\NAudio.1.9.0\lib\net35\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -75,6 +78,12 @@
     <Compile Include="SecSystem\SecSystemBridge.cs" />
     <Compile Include="SecSystem\User.cs" />
     <Compile Include="SecSystem\UserName.cs" />
+    <Compile Include="Ui\VoiceSampleEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ui\VoiceSampleEditor.Designer.cs">
+      <DependentUpon>VoiceSampleEditor.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Ui\EditAccessRule.resx">
       <DependentUpon>EditAccessRule.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,7 +102,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Ui\VoiceSampleEditor.resx">
+      <DependentUpon>VoiceSampleEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="..\..\Assets\ClassDiagram.cd" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
